tests/paczka1/small_fuzzy/28336369.err
Error in line 2: f3OkPe A781 19,4
Error in line 3: f3OkPe S249 77,0
Error in line 6: S249 S249 47,4
Error in line 9: S249 A781 25,4
